# platformctl

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
src/audio/: pulseaudio.rs
src/backlight/: mod.rs
